--- a/public/index.html
+++ b/public/index.html
@@ -18,10 +18,8 @@
 			<ul>
 				<li id="topbar__upper__file">File</li>
 				<li id="topbar__upper__edit">Edit</li>
-				<li id="topbar__upper__view">View</li>
 				<li id="topbar__upper__images">Images</li>
 				<li id="topbar__upper__layers">Layers</li>
-				<li id="topbar__upper__filters">Filters</li>
 				<li id="topbar__upper__shapes">Shapes</li>
 				<li id="topbar__upper__help">Help</li>
 			</ul>
@@ -30,16 +28,13 @@
 			<div class="topbar__lower__left">
 				<ul id="topbar__lower__file">
 					<li id="newFile">Add file</li>
-					<li>Get saved file</li>
-					<li>Save file</li>
+					<li id="topbar__lower__file__get__all__saved__files">Get saved files</li>
+					<li id="topbar__lower__file__save__the__Selected__canvas">Save selected file</li>
+					<li id="topbar__lower__file__merge__and__save__all__canvas">Merge and Save all files</li>
 				</ul>
 				<ul id="topbar__lower__edit">
 					<li id="topbar__lower__edit__Download">Download</li>
 					<li id="topbar__lower__edit__Merge">Merge all layers and download</li>
-				</ul>
-				<ul id="topbar__lower__view">
-					<li>View 1</li>
-					<li>View 2</li>
 				</ul>
 				<ul id="topbar__lower__images">
 					<li id="topbar__lower__images__add__image">Add image</li>
@@ -51,10 +46,6 @@
 				<ul id="topbar__lower__layers">
 					<li id="topbar__lower__layers__add">Add layer</li>
 					<li id="topbar__lower__layers__remove">Remove layer</li>
-				</ul>
-				<ul id="topbar__lower__filters">
-					<li>Filter 1</li>
-					<li>Filter 2</li>
 				</ul>
 				<ul id="topbar__lower__shapes">
 					<li>
@@ -105,6 +96,11 @@
 					</select>
 					<input type="text" class="myText" id="text__config__value" value="replace me!">
 				</div>
+				<div class="rotate__config">
+					<!-- for rotate -->
+					<label for="rotate__config__angle">rotation angle:</label>
+					<input type="range" min="1" max="360" name="rotate__config__angle" value="0" class="slider" id="rotate__config__angle">
+				</div>
 			</div>
 		</div>
 	</nav>
@@ -114,11 +110,13 @@
 				<!-- pen -->
 				<img class="myImageIcon" src="./images/icons/pen.png" alt="pen icon">
 				<img class="myImageIcon" src="./images/icons/eraser.png" alt="icon">
-				<img class="myImageIcon" src="./images/icons/selection.png" alt="icon">
-				<!-- select tools rectangle, triangle, polygon , ellipse-->
-				<img class="myImageIcon" src="./images/icons/rectangle-12-380868.png" alt="icon">
-				<img class="myImageIcon" src="./images/icons/details.png" alt="icon">
-				<img class="myImageIcon" src="./images/icons/polygon-3017709-2507846.png" alt="icon">
+				<!-- scale -->
+				<img class="myImageIcon" src="./images/icons/scale.png" alt="icon">
+				<!-- move -->
+				<img class="myImageIcon" src="./images/icons/move.png" alt="icon">
+				<!-- rotate -->
+				<img class="myImageIcon" src="./images/icons/rotate.png" alt="icon">
+				<!-- text -->
 				<img class="myImageIcon" src="./images/icons/text.png" alt="icon">
 				<!-- crop image icon -->
 				<img class="myImageIcon" src="./images/icons/crop.png" alt="icon">
@@ -134,10 +132,8 @@
 		</div>
 		<div class="bodycontainer__right">
 			<div class="bodycontainer__right__control">
-				<img class="bodycontainer__right__control__layer__move__down" src="./images/icons/arrow-button-navigation-circle-down.png" alt="layer move down"/>
-				<img class="bodycontainer__right__control__layer__move__up" src="./images/icons/arrow-button-navigation-circle-up.png" alt="layer move up">
-				<img class="bodycontainer__right__control__control__move__down" src="./images/icons/down-arrow.png" alt="control move down"/>
-				<img class="bodycontainer__right__control__control__move__up" src="./images/icons/up-arrow.png" alt="control move up">
+				<img class="bodycontainer__right__control__control__move__down" src="./images/icons/arrow-button-navigation-circle-down.png" alt="control move down"/>
+				<img class="bodycontainer__right__control__control__move__up" src="./images/icons/arrow-button-navigation-circle-up.png" alt="control move up">
 			</div>
 			<!-- Draggable DIV -->
 
